fix: fix spacing bug

--- a/src/components/grid-view/GridViewSlot.scss
+++ b/src/components/grid-view/GridViewSlot.scss
@@ -3,7 +3,7 @@
 
 .bdl-GridViewSlot {
     border: 1px solid $bdl-gray-10;
-    margin: 20px 0 0;
+    margin: 10px 0 0;
     overflow: hidden;
     padding: 15px;
     white-space: normal;
